--- a/index.html
+++ b/index.html
@@ -143,14 +143,48 @@
             <div class="row">
                 <div class="col text-center">
                     <h1 class="display-4 text-uppercase text-dark mb-0">
-                        <strong>Skills</strong>
+                        <strong>projects</strong>
                     </h1>
                     <div class="title-underline bg-danger"></div>
                     <p class="mt-2 text-capitalize text-muted">Lorem ipsum dolor sit amet.</p>
                 </div>
             </div>
             <!--end of title-->
-        </div>
+            <div class="row py-3">
+                <!--single project-->
+                <div class="col-sm-6 col-md-4 my-3">
+                    <img src="img/projects-1.jpeg" class="img-fluid rounded" alt="project">
+                </div>
+                 <!--end of single project-->
+                 <!--single project-->
+                <div class="col-sm-6 col-md-4 my-3">
+                    <img src="img/projects-2.jpeg" class="img-fluid img-thumbnail bg-danger border border-danger" alt="project">
+                </div>
+                 <!--end of single project-->
+                 <!--single project-->
+                <div class="col-sm-6 col-md-4 my-3 mx-auto">
+                    <img src="img/projects-3.jpeg" class="img-fluid rounded-circle" alt="project">
+                </div>
+                 <!--end of single project-->
+            </div>
+            <!--end of title-->
+            <div class="row py- no-gutters">
+                <!--single project-->
+                <div class="col-sm-6 col-md-4 my-3">
+                    <img src="img/projects-4.jpeg" class="img-fluid " alt="project">
+                </div>
+                 <!--end of single project-->
+                 <!--single project-->
+                <div class="col-sm-6 col-md-4 my-3">
+                    <img src="img/projects-5.jpeg" class="img-fluid" alt="project">
+                </div>
+                 <!--end of single project-->
+                 <!--single project-->
+                <div class="col-sm-6 col-md-4 my-3 mx-auto">
+                    <img src="img/projects-6.jpeg" class="img-fluid" alt="project">
+                </div>
+                 <!--end of single project-->
+            </div>
     </section>
     <!--End of Project section-->
 
