--- a/index.html
+++ b/index.html
@@ -155,17 +155,18 @@
                 <div class="col-sm-6 col-md-4 my-3">
                     <img src="img/projects-1.jpeg" class="img-fluid rounded" alt="project">
                 </div>
-                 <!--end of single project-->
-                 <!--single project-->
+                <!--end of single project-->
+                <!--single project-->
                 <div class="col-sm-6 col-md-4 my-3">
-                    <img src="img/projects-2.jpeg" class="img-fluid img-thumbnail bg-danger border border-danger" alt="project">
+                    <img src="img/projects-2.jpeg" class="img-fluid img-thumbnail bg-danger border border-danger"
+                        alt="project">
                 </div>
-                 <!--end of single project-->
-                 <!--single project-->
+                <!--end of single project-->
+                <!--single project-->
                 <div class="col-sm-6 col-md-4 my-3 mx-auto">
                     <img src="img/projects-3.jpeg" class="img-fluid rounded-circle" alt="project">
                 </div>
-                 <!--end of single project-->
+                <!--end of single project-->
             </div>
             <!--end of title-->
             <div class="row py- no-gutters">
@@ -173,20 +174,169 @@
                 <div class="col-sm-6 col-md-4 my-3">
                     <img src="img/projects-4.jpeg" class="img-fluid " alt="project">
                 </div>
-                 <!--end of single project-->
-                 <!--single project-->
+                <!--end of single project-->
+                <!--single project-->
                 <div class="col-sm-6 col-md-4 my-3">
                     <img src="img/projects-5.jpeg" class="img-fluid" alt="project">
                 </div>
-                 <!--end of single project-->
-                 <!--single project-->
+                <!--end of single project-->
+                <!--single project-->
                 <div class="col-sm-6 col-md-4 my-3 mx-auto">
                     <img src="img/projects-6.jpeg" class="img-fluid" alt="project">
                 </div>
-                 <!--end of single project-->
+                <!--end of single project-->
             </div>
     </section>
     <!--End of Project section-->
+    <!--team section-->
+    <section id="team" class="py-5 bg-light">
+        <div class="container">
+            <!--title-->
+            <div class="row">
+                <div class="col text-center">
+                    <h1 class="display-4 text-uppercase text-dark mb-0">
+                        <strong>team</strong>
+                    </h1>
+                    <div class="title-underline bg-danger"></div>
+                    <p class="mt-2 text-capitalize text-muted">Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+            <!--end of title-->
+            <div class="row">
+                <!--team member-->
+                <div class="col-md-6 col-lg-4 my-3">
+                    <div class="card">
+                        <img src="img/team-1.jpg" alt="member" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title text-capitalize">team member</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, veritatis.</p>
+                            <a href="" class="btn btn-outline-warning text-uppercase">press here</a>
+                        </div>
+                        <div class="card-footer bg-secondary d-flex justify-content-around">
+                            <a href="#">
+                                <i class="fab fa-facebook fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-google fa-2x text-dark"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!--end of team member-->
+                 <!--team member-->
+                 <div class="col-md-6 col-lg-4 my-3">
+                    <div class="card">
+                        <img src="img/team-2.jpg" alt="member" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title text-capitalize">team member</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, veritatis.</p>
+                            <a href="" class="btn btn-outline-warning text-uppercase">press here</a>
+                        </div>
+                        <div class="card-footer bg-secondary d-flex justify-content-between">
+                            <a href="#">
+                                <i class="fab fa-facebook fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-google fa-2x text-dark"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!--end of team member-->
+                 <!--team member-->
+                 <div class="col-md-6 col-lg-4 my-3">
+                    <div class="card">
+                        <img src="img/team-3.jpg" alt="member" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title text-capitalize">team member</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, veritatis.</p>
+                            <a href="" class="btn btn-outline-warning text-uppercase">press here</a>
+                        </div>
+                        <div class="card-footer bg-secondary d-flex justify-content-center">
+                            <a href="#">
+                                <i class="fab fa-facebook fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-google fa-2x text-dark"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!--end of team member-->
+                 <!--team member-->
+                 <div class="col-md-6 col-lg-4 my-3 mx-auto">
+                    <div class="card">
+                        <img src="img/team-4.jpg" alt="member" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title text-capitalize">team member</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, veritatis.</p>
+                            <a href="" class="btn btn-outline-warning text-uppercase">press here</a>
+                        </div>
+                        <div class="card-footer bg-secondary d-flex justify-content-end">
+                            <a href="#">
+                                <i class="fab fa-facebook fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-google fa-2x text-dark"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!--end of team member-->
+                  <!--team member-->
+                  <div class="col-md-6 col-lg-4 my-3 mx-auto">
+                    <div class="card">
+                        <img src="img/team-5.jpg" alt="member" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title text-capitalize">team member</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, veritatis.</p>
+                            <a href="" class="btn btn-outline-warning text-uppercase">press here</a>
+                        </div>
+                        <div class="card-footer bg-secondary d-flex justify-content-start">
+                            <a href="#">
+                                <i class="fab fa-facebook fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-twitter fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-youtube fa-2x text-dark"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fab fa-google fa-2x text-dark"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!--end of team member-->
+            </div>
+        </div>
+    </section>
+    <!--end team section-->
 
 </body>
 
