--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <script src="./js/all.min.js"></script>
-    <link rel="stylesheet" href="./css/main.css">
+    <script src="./js/jquery-3.4.1.min.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -337,6 +339,110 @@
         </div>
     </section>
     <!--end team section-->
+
+
+    <!--carousel section-->
+    <section id="carousel" class="py-5 bg-primary">
+        <div class="container">
+         <!--section title-->
+         <div class="row">
+            <div class="col text-center">
+                <h1 class="display-4 text-uppercase text-dark mb-0">
+                    <strong>First Carousel</strong>
+                </h1>
+                <div class="title-underline bg-warning"></div>
+                <p class="mt-2 text-capitalize text-muted">Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+        <!--end of section title-->   
+        <div class="row">
+            <div class="col-md-8 mx-auto text-center">
+                <div id="example" class="carousel slide" data-ride="carousel">
+                    <!--indicators-->
+                    <ul class="carousel-indicators">
+                        <li data-target="#example" data-slide-to='0' class="active"></li>
+                        <li data-target="#example" data-slide-to='1'></li>
+                        <li data-target="#example" data-slide-to='2'></li>
+                        <li data-target="#example" data-slide-to='3'></li>
+                   </ul>
+                   <!--images-->
+                   <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <img   src="img/projects-1.jpeg" alt="project" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img   src="img/projects-2.jpeg" alt="project" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img  src="img/projects-3.jpeg" alt="project" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img  src="img/projects-4.jpeg" alt="project" class="d-block w-100">
+                    </div>
+                   </div>
+                   <!--end of images-->
+
+                 <!--control-->
+                 <a href="#example" class="carousel-control-prev" data-slide="prev">
+                     <span class="carousel-control-prev-icon"></span>
+                 </a>  
+                 <a href="#example" class="carousel-control-next" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </a>  
+                </div>
+            </div>
+        </div> 
+        </div>
+    </section>
+    <!--end carousel section-->
+    <!-- filler section-->
+    <section id="filler" class="p-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 mx-auto text-center">
+                    <h1 class="text-danger">my first bootstrap website</h1>
+                    <p class="lead text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate optio odit facere maxime modi tempore adipisci pariatur harum labore provident.</p>
+                    <a href="#" class="btn btn-lg btn-primary m-2">press here</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--end of  filler section-->
+    <!--blog section-->
+    <section id="blog" class="p-5 bg-success">
+        <div class="container">
+             <!--section title-->
+         <div class="row">
+            <div class="col text-center">
+                <h1 class="display-4 text-uppercase text-dark mb-0">
+                    <strong>blog</strong>
+                </h1>
+                <div class="title-underline bg-warning"></div>
+                <p class="mt-2 text-capitalize text-muted">Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+        <!--end of section title-->   
+        <div class="row">
+            <div class="col-md-4">
+                <img src="img/projects-1.jpeg" class="img-fluid img-thumbnail" alt="">
+                <h2 class="my-3 text-warning">project 1</h2>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam iure quas ipsam eos nam tempora magnam aperiam. Quidem, libero nam.</p>
+            </div>
+            <div class="col-md-4 mt-3">
+                <img src="img/projects-2.jpeg" class="img-fluid img-thumbnail" alt="">
+                <h2 class="my-3 text-warning">project 1</h2>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam iure quas ipsam eos nam tempora magnam aperiam. Quidem, libero nam.</p>
+            </div>
+            <div class="col-md-4 mt-5" >
+                <img src="img/projects-3.jpeg" class="img-fluid img-thumbnail" alt="">
+                <h2 class="my-3 text-warning">project 1</h2>
+                <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam iure quas ipsam eos nam tempora magnam aperiam. Quidem, libero nam.</p>
+            </div>
+        </div>
+        </div>
+    </section>
+    <!--end of blog section-->
+
 
 </body>
 
