--- a/index.html
+++ b/index.html
@@ -14,6 +14,32 @@
 </head>
 
 <body>
+    <!--navbar-->
+    <nav class="navbar py-3 navbar-light navbar-expand-sm">
+        <!--logo-->
+        <a href="#" class="navbar-brand text-uppercase font-italic ">First website</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarLinks">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarLinks">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a href="#header" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#skills" class="nav-link">Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#about" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#projects" class="nav-link">Projects</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!--end of navbar-->
+    <!--header-->
     <header id="header" class="bg-dark">
         <div class="container">
             <div class="row height align-items-center">
@@ -643,8 +669,8 @@
                     </div>
                 </div>
                 <!--end of card-->
-                 <!--card-->
-                 <div class="col-md-4 my-4">
+                <!--card-->
+                <div class="col-md-4 my-4">
                     <div class="card">
                         <!--card header-->
                         <div class="card-header bg-primary text-white text-uppercase text-center py-4">
@@ -664,7 +690,7 @@
                                 <li class="list-group-item">Lorem, ipsum dolor.</li>
                             </ul>
                         </div>
-                       
+
                         <!--card footer-->
                         <div class="card-footer">
                             <a href="" class="btn btn-outline-dark btn-block text-capitalize">Sign up</a>
@@ -672,8 +698,8 @@
                     </div>
                 </div>
                 <!--end of card-->
-                 <!--card-->
-                 <div class="col-md-4 my-4">
+                <!--card-->
+                <div class="col-md-4 my-4">
                     <div class="card">
                         <!--card header-->
                         <div class="card-header bg-primary text-white text-uppercase text-center py-4">
@@ -698,11 +724,68 @@
                     </div>
                 </div>
                 <!--end of card-->
-                
+
             </div>
         </div>
     </section>
     <!--end of pricing section-->
+    <!--footer-->
+    <footer id="footer" class="bg-dark py-5">
+        <div class="container">
+            <!--title-->
+            <div class="row">
+                <div class="col text-center">
+                    <h1 class="display-4 text-uppercase text-white mb-0">
+                        <strong>Footer</strong>
+                    </h1>
+                    <div class="title-underline bg-primary"></div>
+                    <p class="mt-2 text-capitalize text-white">Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+            <!--end of title-->
+            <div class="row">
+                <div class="col text-center">
+                    <a href="https://www.facebook.com/profile.php?id=100023354824296" class="btn">
+                        <i class="fab fa-facebook fa-3x text-primary m-2"></i>
+                    </a>
+                    <a href="#" class="btn">
+                        <i class="fab fa-twitter fa-3x text-primary m-2"></i>
+                    </a>
+                    <a href="https://www.instagram.com" class="btn">
+                        <i class="fab fa-instagram fa-3x text-primary m-2"></i>
+                    </a>
+                    <a href="#" class="btn">
+                        <i class="fab fa-google-plus fa-3x text-primary m-2"></i>
+                    </a>
+                    <button type="button" class="btn btn-danger d-block mx-auto my-3" data-toggle="modal"
+                        data-target="#modal">Log out</button>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--end of footer-->
+    <!--modal-->
+    <div class="modal fade" id="modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <!--modal header-->
+                <div class="modal-header">
+                    <h3 class="modal-title">so sorry to see you leave</h3>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <!--modal body-->
+                <div class="modal-body">
+                    <p>this is some random text in the modal body</p>
+                </div>
+                <!--modal footer-->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
